# Shop-backend

./: .drawio  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: entrypoint.sh  pyproject.toml
backend/cart/: admin.py  models.py
backend/cart/migrations/: 0001_initial.py  0002_alter_cart_user.py
backend/carts/: admin.py  models.py  serializers.py  service.py  tests.py  views.py
backend/carts/migrations/: 0001_initial.py  0002_delete_cart.py
backend/core/: settings.py  urls.py
backend/coupons/: admin.py  models.py
backend/coupons/migrations/: 0001_initial.py
backend/internal_api/: urls.py
backend/internal_api/carts_api/: apps.py  serializers.py  tests.py  urls.py  views.py
backend/internal_api/orders_api/: serializers.py  tests.py  urls.py  views.py
backend/internal_api/products_api/: serializers.py  tests.py  urls.py  views.py
backend/internal_api/warehouses_api/: apps.py  serializers.py  tests.py  urls.py  views.py
backend/orders/: admin.py  models.py  serializers.py  tests.py  views.py
backend/orders/migrations/: 0001_initial.py  0002_order_coupon_order_discount.py  0002_remove_order_created_remove_order_modified.py  0003_order_status.py  0004_order_payment_type.py  0005_remove_order_payment_type_remove_order_status.py  0006_order_status.py  (+3 more)
backend/products/: admin.py  models.py  serializers.py  tests.py  views.py
backend/users/: models.py  serializers.py  utils.py  views.py
backend/warehouse/: models.py
backend/warehouses/: admin.py  models.py  tests.py  views.py
frontend/: Dockerfile  (+3 more)
(+33 files in other folders)
